kubernetes/kanidm/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kanidm
  namespace: kanidm
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sso.efym.net`)
      kind: Rule
      services:
        - name: kanidm
          port: 443
  tls:
    secretName: efym-tls
